--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   "license": "MIT",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
-    "bootstrap": "^4.1.3",
-    "browser-sync": "^2.26.3",
-    "gulp": "^3.9.1",
+    "bootstrap": "^4.3.1",
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^5.0.3",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
-    "jquery": "^3.3.1",
-    "popper": "^1.0.1",
+    "jquery": "^3.4.1",
+    "js-yaml": "^3.13.1",
+    "popper.js": "^1.15.0",
     "scrollwatch": "^2.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "hoek": "^6.1.3"
+  }
 }
