--- a/package.json
+++ b/package.json
@@ -21,11 +21,8 @@
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
     "jquery": "^3.4.1",
-    "js-yaml": "^3.13.1",
     "popper.js": "^1.15.0",
     "scrollwatch": "^2.0.1"
   },
-  "dependencies": {
-    "hoek": "^6.1.3"
-  }
+  "dependencies": {}
 }
